--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     background-size: cover;
     background-attachment: fixed;
     width: 100%;
+    height: 100%;
 }
 
 a {
@@ -504,7 +505,7 @@ a {
 
     .main-section {
         margin: 20px;
-        height: 95vh;
+        height: 93vh;
     }
 
     .skill-section {
@@ -518,12 +519,11 @@ a {
         top: 0;
         left: 0;
         width: 100%;
-        height: 90vh;
+        height: 80vh;
         background-repeat: no-repeat;
         background-size: contain;
         background-position: center;
         opacity: 0.5;
-        /* Adjust the opacity as needed */
         z-index: -1;
     }
 
@@ -602,6 +602,11 @@ a {
 
 @media (max-width: 769px) {
 
+    .logo-text{
+        font-size: 30px;
+        width: 60px;
+    }
+
     .name-text {
         font-size: 4rem;
     }
@@ -672,6 +677,10 @@ a {
 
     .main-section {
         margin: 10px;
+    }
+
+    .skill-section{
+        margin-top: 30px;
     }
 
     .name-text {
